# dive-color-corrector

./: .gitignore  Dive Color Corrector.spec.template  README.md  _config.yml  correct.py  dcc.py  ga_script.html  hatch.toml  index.md  inspect_model.py  privacy-policy.md  pyproject.toml  readme.md  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  gui-release.yml
dcc/: __init__.py  __main__.py
dcc/gui/: __init__.py  app.py
logo/: logo.icns  logo.py
src/dive_color_corrector/: __init__.py  __main__.py  cli.py
src/dive_color_corrector/core/: __init__.py  correction.py
src/dive_color_corrector/core/color/: constants.py  filter.py  hue.py
src/dive_color_corrector/core/models/: sesr.py
src/dive_color_corrector/core/processing/: image.py  video.py
src/dive_color_corrector/core/utils/: constants.py
src/dive_color_corrector/gui/: __init__.py  app.py
tests/: test_sesr.py
tests/samples/: compare_images.py  create_test_image.py
